# upload-receiver

./: CHANGELOG.md  Dockerfile  README.md  dev-env  docker-compose.yml  mock-request.json  pyproject.toml
.github/workflows/: docker-build.yml  release-please.yml
hooks/: post-finish  pre-create
hooks/hookschema/: __init__.py
scripts/: README  gen_hook_schema.go  generate-hook-types.sh  go.mod  go.sum  hook.schema.json
