[project]
name = "upload-receiver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.4",
]

[tool.uv.scripts]
format = "ruff format hooks/post-finish"

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
